<resources>

    <!-- App Name -->
    <string name="app_name">Kyahaal</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Phone</string>
    <string name="prompt_code">OTP</string>
    <string name="invalid_number">Please enter a valid phone number</string>
    <string name="invalid_code">OTP must be of 6 Characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to saving preferences-->
    <string name="login_completion_state">isDataUpdating</string>
    <string name="isDataUpdated">isDataUpdated</string>

    <!-- Strings related to FragmentManager Tags-->
    <string name="login_tg">login</string>
    <string name="verification_tg">verify</string>
    <string name="udata_tg">udata</string>
    <string name="cdp_fab_desc">For Changing Dp</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="fs_dp_tg">fdp</string>
    <string name="finishingfrag_tg">fifrag</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- UserData Preference Headings -->
    <string name="username_title">Your Name</string>
    <string name="mobile_title">Your Number</string>
    <string name="status_title">Status</string>

    <!-- Status related Strings -->
    <string name="default_status">Hey There!! I\'m Using KyaHaal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_full_screen_images">for full screen images</string>

    <!-- Transition names -->
    <string name="dp_transition">dp_trans</string>

    <!-- Strings related FirebaseStorage -->
    <string name="dp_ref_dir_name">profile_pic</string>

    <!-- Strings related to tabs -->
    <string name="tab_text_1">Chat</string>
    <string name="tab_text_2">Contacts</string>


    <!-- Strings for AppBar title -->
    <string name="message_activiy">Messages</string>

   <!-- ca-app-pub-3737658489234649/1586848607-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>