<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.UserDataActivity.UserDataFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Kyahaal.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/app_name"
            app:titleTextColor="?attr/colorOnPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/dpimage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:elevation="5dp"
        android:src="@drawable/ic_default_dp1"
        app:civ_border="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:transitionName="@string/dp_transition"/>

    <ProgressBar
        android:id="@+id/dp_uploading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/dpimage"
        app:layout_constraintEnd_toEndOf="@+id/dpimage"
        app:layout_constraintStart_toStartOf="@+id/dpimage"
        app:layout_constraintTop_toTopOf="@+id/dpimage"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/changedp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/cdp_fab_desc"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/dpimage"
        app:layout_constraintEnd_toEndOf="@+id/dpimage" />

    <TextView
        android:id="@+id/uname_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/username_title"
        android:textColor="@color/darkgray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpimage" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/blue_pixelm1"
        android:ems="10"
        android:inputType="textPersonName"
        android:textCursorDrawable="@drawable/edittextcusrsorblue_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uname_title"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/uname_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toStartOf="@+id/uname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uname_title" />

    <TextView
        android:id="@+id/unumber_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mobile_title"
        android:textColor="@color/darkgray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uname" />

    <TextView
        android:id="@+id/unumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/editTextBackground"
        android:backgroundTint="@color/blue_pixelm1"
        android:clickable="false"
        android:ems="10"
        android:linksClickable="false"
        android:longClickable="false"
        android:textCursorDrawable="@drawable/edittextcusrsorblue_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@+id/unumber_title" />

    <ImageView
        android:id="@+id/unumber_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/ic_baseline_phone_24"
        app:layout_constraintEnd_toStartOf="@+id/uname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unumber_title" />

    <TextView
        android:id="@+id/status_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/status_title"
        android:textColor="@color/darkgray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unumber" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="24dp"
        android:background="?attr/editTextBackground"
        android:backgroundTint="@color/blue_pixelm1"
        android:clickable="false"
        android:ems="10"
        android:linksClickable="false"
        android:longClickable="false"
        android:text="@string/default_status"
        android:textCursorDrawable="@drawable/edittextcusrsorblue_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_title" />

    <ImageView
        android:id="@+id/status_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/ic_outline_info_24"
        app:layout_constraintEnd_toStartOf="@+id/uname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:enabled="false"
        android:src="@drawable/ic_baseline_done_24"
        app:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
